Name:                Cron
Version:             0.0.0
Description:         Cron datatypes and parser
License:             MIT
License-file:        LICENSE
Author:              Michael Xavier
Copyright:           Copyright: (c) 2012 Michael Xavier
Maintainer:          michael@michaelxavier.net
Build-Type:          Simple
Cabal-Version:       >= 1.6
extra-source-files:  README.md

library
 Exposed-modules: System.Cron,
                  System.Cron.Parser
 Ghc-Options:     -Wall
 build-depends:   base            >= 4        && < 5,
                  attoparsec      == 0.10.*,
                  text            == 0.11.*,
                  time            >= 1.4

test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: src, test
  build-depends:  base >= 4 && < 5,
                  hspec == 1.1.*,
                  hspec-discover == 0.*
