Name:                cron
Version:             0.2.1
Description:
  Cron data structure and Attoparsec parser. The idea is to embed it in larger
  systems which want to roll their own scheduled tasks in a format that people
  are used to.

  'System.Cron' is where all the interesting datatypes live. You will also find
  'scheduleMatches', which you can use to compare a time against a
  'CronSchedule' to see if an action needs to be performed.  System.Cron.Parser
  is where you will find the parsers `cronSchedule`, `crontabEntry` and
  `cronTab`. To parse individual schedules up to full crontab files.

Synopsis:            Cron datatypes and Attoparsec parser
Category:            Text, Parsing, System
License:             MIT
License-file:        LICENSE
Author:              Michael Xavier <michael@michaelxavier.net>
Copyright:           Copyright: (c) 2012-2014 Michael Xavier
Maintainer:          Michael Xavier <michael@michaelxavier.net>
Build-Type:          Simple
Stability:           experimental
Tested-With:         GHC == 7.4.1
Cabal-Version:       >= 1.8
Extra-Source-Files:
  README.md
  LICENSE
  changelog
  test/Spec.hs
  test/System/Cron/ParserSpec.hs
  test/System/CronSpec.hs
Homepage:           http://github.com/michaelxavier/cron
Bug-Reports:        http://github.com/michaelxavier/cron/issues

library
 Exposed-modules: System.Cron,
                  System.Cron.Parser
 Ghc-Options:     -Wall
 Hs-source-dirs:  src
 build-depends:   base            >= 4 && < 5,
                  attoparsec      >= 0.10,
                  text            >= 0.11 && < 2,
                  time            >= 1.4

test-suite spec
  Type:           exitcode-stdio-1.0
  Main-Is:        Spec.hs
  Hs-Source-Dirs: test
  Build-Depends:  base >= 4 && < 5,
                  cron,
                  hspec == 1.3.*,
                  hspec-expectations,
                  attoparsec      >= 0.10,
                  text            >= 0.11 && < 2,
                  time            >= 1.4

source-repository head
  Type:     git
  Location: https://github.com/michaelxavier/cron
