Name:                cron
Version:             0.3.2
Description:
  Cron data structure and Attoparsec parser. The idea is to embed it in larger
  systems which want to roll their own scheduled tasks in a format that people
  are used to.

  'System.Cron' is where all the interesting datatypes live. You will also find
  'scheduleMatches', which you can use to compare a time against a
  'CronSchedule' to see if an action needs to be performed.  System.Cron.Parser
  is where you will find the parsers `cronSchedule`, `crontabEntry` and
  `cronTab`. To parse individual schedules up to full crontab files.

Synopsis:            Cron datatypes and Attoparsec parser
Category:            Text, Parsing, System
License:             MIT
License-file:        LICENSE
Author:              Michael Xavier <michael@michaelxavier.net>
Copyright:           Copyright: (c) 2012-2014 Michael Xavier
Maintainer:          Michael Xavier <michael@michaelxavier.net>
Build-Type:          Simple
Stability:           experimental
Tested-With:         GHC == 7.4.1
                   , GHC == 7.6.3
                   , GHC == 7.8.3
                   , GHC == 7.10.1
Cabal-Version:       >= 1.8
Extra-Source-Files:
  README.md
  LICENSE
  changelog
  test/Main.hs
  test/SpecHelper.hs
  test/System/Test/Cron.hs
  test/System/Test/Cron/Parser.hs
  test/System/Test/Cron/Schedule.hs
Homepage:           http://github.com/michaelxavier/cron
Bug-Reports:        http://github.com/michaelxavier/cron/issues

library
 Exposed-modules: System.Cron,
                  System.Cron.Parser,
                  System.Cron.Schedule
 Ghc-Options:     -Wall
 Hs-source-dirs:  src
 build-depends:   base            >= 4 && < 5,
                  attoparsec      >= 0.10,
                  text            >= 0.11 && < 2,
                  time            >= 1.4,
                  old-locale      >= 1.0,
                  mtl             >= 2.0.1,
                  mtl-compat      >= 0.2.1

test-suite test
  Type:           exitcode-stdio-1.0
  Main-Is:        Main.hs
  Hs-Source-Dirs: test
  Build-Depends:  base >= 4 && < 5,
                  cron,
                  tasty,
                  tasty-hunit,
                  tasty-quickcheck,
                  derive,
                  attoparsec            >= 0.10,
                  text                  >= 0.11 && < 2,
                  time                  >= 1.4,
                  transformers-compat   >= 0.4
  Ghc-Options: -threaded -rtsopts -with-rtsopts=-N

source-repository head
  Type:     git
  Location: https://github.com/michaelxavier/cron
